# my_parser_rust

./: Cargo.toml  ReadMe.md  Readme.md
src/: grammar.pest  lib.rs  main.rs
test_files/: first_test_file.txt  test_file1.txt  test_file2.txt  test_file2.yaml  test_file3.txt
tests/: grammar_tests.rs
